p2/confs/ingress.yaml
---
# Ingress
# https://kubernetes.io/fr/docs/concepts/services-networking/ingress
# https://github.com/paulbouwer/hello-kubernetes/blob/6e9ac0e273bfdaf1f9b78501e8b046be00d44eb3/docs/deploy-with-ingress.md#deploy-ingress-definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-applications
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-one
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-two
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three
                port:
                  number: 80
  defaultBackend:
    service:
      name: app-three
      port:
        number: 80
